cosas de docker

--- a/Mastering/ch2a.ipynb
+++ b/Mastering/ch2a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting .\\mnist\\train-images-idx3-ubyte.gz\n",
-      "Extracting .\\mnist\\train-labels-idx1-ubyte.gz\n",
-      "Extracting .\\mnist\\t10k-images-idx3-ubyte.gz\n",
-      "Extracting .\\mnist\\t10k-labels-idx1-ubyte.gz\n"
+      "Extracting ./mnist/train-images-idx3-ubyte.gz\n",
+      "Extracting ./mnist/train-labels-idx1-ubyte.gz\n",
+      "Extracting ./mnist/t10k-images-idx3-ubyte.gz\n",
+      "Extracting ./mnist/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-10-cdad1bafbb6b>:1: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=model, labels=y))\n",
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(loss)\n",
@@ -166,64 +181,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0000 loss = 16.623318\n",
-      "epoch: 0001 loss = 10.610090\n",
-      "epoch: 0002 loss = 7.206725\n",
-      "epoch: 0003 loss = 5.227058\n",
-      "epoch: 0004 loss = 4.129632\n",
-      "epoch: 0005 loss = 3.447593\n",
-      "epoch: 0006 loss = 2.902883\n",
-      "epoch: 0007 loss = 2.562798\n",
-      "epoch: 0008 loss = 2.277590\n",
-      "epoch: 0009 loss = 2.135688\n",
-      "epoch: 0010 loss = 2.038962\n",
-      "epoch: 0011 loss = 1.884609\n",
-      "epoch: 0012 loss = 1.798710\n",
-      "epoch: 0013 loss = 1.673571\n",
-      "epoch: 0014 loss = 1.644344\n",
-      "epoch: 0015 loss = 1.549257\n",
-      "epoch: 0016 loss = 1.552558\n",
-      "epoch: 0017 loss = 1.471107\n",
-      "epoch: 0018 loss = 1.442182\n",
-      "epoch: 0019 loss = 1.404987\n",
-      "epoch: 0020 loss = 1.369554\n",
-      "epoch: 0021 loss = 1.365152\n",
-      "epoch: 0022 loss = 1.307181\n",
-      "epoch: 0023 loss = 1.262045\n",
-      "epoch: 0024 loss = 1.247930\n",
-      "epoch: 0025 loss = 1.216945\n",
-      "epoch: 0026 loss = 1.226793\n",
-      "epoch: 0027 loss = 1.217638\n",
-      "epoch: 0028 loss = 1.184781\n",
-      "epoch: 0029 loss = 1.145880\n",
-      "epoch: 0030 loss = 1.161637\n",
-      "epoch: 0031 loss = 1.149745\n",
-      "epoch: 0032 loss = 1.124426\n",
-      "epoch: 0033 loss = 1.124790\n",
-      "epoch: 0034 loss = 1.129827\n",
-      "epoch: 0035 loss = 1.092602\n",
-      "epoch: 0036 loss = 1.075715\n",
-      "epoch: 0037 loss = 1.100028\n",
-      "epoch: 0038 loss = 1.031801\n",
-      "epoch: 0039 loss = 1.053830\n",
-      "epoch: 0040 loss = 1.062264\n",
-      "epoch: 0041 loss = 1.034812\n",
-      "epoch: 0042 loss = 1.052166\n",
-      "epoch: 0043 loss = 1.007007\n",
-      "epoch: 0044 loss = 1.032691\n",
-      "epoch: 0045 loss = 0.998333\n",
-      "epoch: 0046 loss = 1.017122\n",
-      "epoch: 0047 loss = 1.013976\n",
-      "epoch: 0048 loss = 0.958675\n",
-      "epoch: 0049 loss = 0.990577\n",
-      "accuracy=0.85399997\n"
+      "epoch: 0000 loss = 16.855408\n",
+      "epoch: 0001 loss = 11.238250\n",
+      "epoch: 0002 loss = 6.905455\n",
+      "epoch: 0003 loss = 4.968870\n",
+      "epoch: 0004 loss = 3.680636\n",
+      "epoch: 0005 loss = 3.134603\n",
+      "epoch: 0006 loss = 2.705464\n",
+      "epoch: 0007 loss = 2.428341\n",
+      "epoch: 0008 loss = 2.258404\n",
+      "epoch: 0009 loss = 2.067581\n",
+      "epoch: 0010 loss = 1.960110\n",
+      "epoch: 0011 loss = 1.751432\n",
+      "epoch: 0012 loss = 1.703946\n",
+      "epoch: 0013 loss = 1.697652\n",
+      "epoch: 0014 loss = 1.584392\n",
+      "epoch: 0015 loss = 1.536169\n",
+      "epoch: 0016 loss = 1.464997\n",
+      "epoch: 0017 loss = 1.471054\n",
+      "epoch: 0018 loss = 1.432210\n",
+      "epoch: 0019 loss = 1.417249\n",
+      "epoch: 0020 loss = 1.359397\n",
+      "epoch: 0021 loss = 1.331323\n",
+      "epoch: 0022 loss = 1.261358\n",
+      "epoch: 0023 loss = 1.303885\n",
+      "epoch: 0024 loss = 1.260155\n",
+      "epoch: 0025 loss = 1.249626\n",
+      "epoch: 0026 loss = 1.229917\n",
+      "epoch: 0027 loss = 1.197596\n",
+      "epoch: 0028 loss = 1.156248\n",
+      "epoch: 0029 loss = 1.177517\n",
+      "epoch: 0030 loss = 1.170925\n",
+      "epoch: 0031 loss = 1.088233\n",
+      "epoch: 0032 loss = 1.159092\n",
+      "epoch: 0033 loss = 1.131563\n",
+      "epoch: 0034 loss = 1.138070\n",
+      "epoch: 0035 loss = 1.119371\n",
+      "epoch: 0036 loss = 1.084947\n",
+      "epoch: 0037 loss = 1.071797\n",
+      "epoch: 0038 loss = 1.060020\n",
+      "epoch: 0039 loss = 1.042035\n",
+      "epoch: 0040 loss = 1.035698\n",
+      "epoch: 0041 loss = 1.024601\n",
+      "epoch: 0042 loss = 1.007874\n",
+      "epoch: 0043 loss = 1.007785\n",
+      "epoch: 0044 loss = 1.019702\n",
+      "epoch: 0045 loss = 0.998567\n",
+      "epoch: 0046 loss = 0.963765\n",
+      "epoch: 0047 loss = 0.997126\n",
+      "epoch: 0048 loss = 0.969746\n",
+      "epoch: 0049 loss = 0.954206\n",
+      "accuracy=0.86250001\n"
      ]
     }
    ],
@@ -262,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4rc1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
