--- a/Mastering/ch5b.ipynb
+++ b/Mastering/ch5b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +51,13 @@
      "output_type": "stream",
      "text": [
       "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
-      "Extracting C:\\Users\\ledra\\datasets\\mnist\\train-images-idx3-ubyte.gz\n",
+      "Extracting /home/emmanuel/datasets/mnist/train-images-idx3-ubyte.gz\n",
       "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
-      "Extracting C:\\Users\\ledra\\datasets\\mnist\\train-labels-idx1-ubyte.gz\n",
+      "Extracting /home/emmanuel/datasets/mnist/train-labels-idx1-ubyte.gz\n",
       "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
-      "Extracting C:\\Users\\ledra\\datasets\\mnist\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting /home/emmanuel/datasets/mnist/t10k-images-idx3-ubyte.gz\n",
       "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
-      "Extracting C:\\Users\\ledra\\datasets\\mnist\\t10k-labels-idx1-ubyte.gz\n"
+      "Extracting /home/emmanuel/datasets/mnist/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +160,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "reshape_2 (Reshape)          (None, 28, 28, 1)         0         \n",
+      "reshape_1 (Reshape)          (None, 28, 28, 1)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 28, 28, 32)        544       \n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        544       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 64)        32832     \n",
+      "conv2d_2 (Conv2D)            (None, 14, 14, 64)        32832     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
       "flatten_1 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,44 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "55000/55000 [==============================] - 120s 2ms/step - loss: 0.9177 - acc: 0.7663\n",
-      "Epoch 2/10\n",
-      "55000/55000 [==============================] - 118s 2ms/step - loss: 0.2486 - acc: 0.9248\n",
-      "Epoch 3/10\n",
-      "55000/55000 [==============================] - 120s 2ms/step - loss: 0.1746 - acc: 0.9482\n",
-      "Epoch 4/10\n",
-      "55000/55000 [==============================] - 120s 2ms/step - loss: 0.1342 - acc: 0.9598\n",
-      "Epoch 5/10\n",
-      "55000/55000 [==============================] - 119s 2ms/step - loss: 0.1106 - acc: 0.9667\n",
-      "Epoch 6/10\n",
-      "55000/55000 [==============================] - 119s 2ms/step - loss: 0.0946 - acc: 0.9717\n",
-      "Epoch 7/10\n",
-      "55000/55000 [==============================] - 120s 2ms/step - loss: 0.0830 - acc: 0.9752\n",
-      "Epoch 8/10\n",
-      "55000/55000 [==============================] - 119s 2ms/step - loss: 0.0743 - acc: 0.9777\n",
-      "Epoch 9/10\n",
-      "55000/55000 [==============================] - 119s 2ms/step - loss: 0.0668 - acc: 0.9802\n",
-      "Epoch 10/10\n",
-      "55000/55000 [==============================] - 119s 2ms/step - loss: 0.0618 - acc: 0.9813\n"
+      "Epoch 1/10\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x15137803a20>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -244,20 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 7s 721us/step\n",
-      "\n",
-      "Test loss: 0.06084217724157497\n",
-      "Test accuracy: 0.9804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = model.evaluate(X_test, Y_test)\n",
     "print('\\nTest loss:', score[0])\n",
@@ -288,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4rc1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
