--- a/Mastering/Untitled.ipynb
+++ b/Mastering/Untitled.ipynb
@@ -68,8 +68,7 @@
     "y=tf.placeholder(dtype=tf.float32,name='y',shape=[None,n_classes])\n",
     "\n",
     "# reshape input to (n_samples,n_width,n_height,n_depth)\n",
-    "x_ = tf.reshape(x, shape=[-1, n_width, n_height, n_depth])\n",
-    "    "
+    "x_ = tf.reshape(x, shape=[-1, n_width, n_height, n_depth])"
    ]
   },
   {
@@ -85,7 +84,7 @@
     "layer1_conv=tf.nn.relu(tf.nn.conv2d(x_,layer1_w,strides=[1,1,1,1],padding='SAME')+layer1_b)\n",
     "\n",
     "#pool \n",
-    "layer1_pool=tf.nn.max_pool(layer1_conv,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')\n"
+    "layer1_pool=tf.nn.max_pool(layer1_conv,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')"
    ]
   },
   {
@@ -101,7 +100,7 @@
     "layer2_conv=tf.nn.relu(tf.nn.conv2d(layer1_pool,layer2_w,strides=[1,1,1,1],padding='SAME')+layer2_b)\n",
     "\n",
     "#pool \n",
-    "layer2_pool=tf.nn.max_pool(layer2_conv,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')\n"
+    "layer2_pool=tf.nn.max_pool(layer2_conv,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')"
    ]
   },
   {
@@ -115,7 +114,7 @@
     "layer3_b=tf.Variable(tf.random_normal([1024]),name='l3_b')\n",
     "\n",
     "#fully connected\n",
-    "layer3_fc=tf.nn.relu(tf.matmul(tf.reshape(layer2_pool,[-1,64*7*7*1]),layer3_w)+layer3_b)\n"
+    "layer3_fc=tf.nn.relu(tf.matmul(tf.reshape(layer2_pool,[-1,64*7*7*1]),layer3_w)+layer3_b)"
    ]
   },
   {
@@ -201,13 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -226,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
